added week 4 reflections.

--- a/home-page.html
+++ b/home-page.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css"
 				href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-				integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+				integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+				crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Oswald|Inconsolata" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="./style.css"/>
 		<title>My Professional Development Journey</title>
 	</head>
-	<body>
+
+	<body class="home-page">
 		<div class="container text-center ">
-			<h1>My Professional Development Journey</h1>
-			<h2>- Ryo Lambert</h2>
+			<h1 class="title-head">My Professional Development Journey</h1>
+			<h2 class="title-subhead">- Ryo Lambert</h2>
 			<hr/>
 		</div>
 		<div class="container">
-			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow main-box">
-						<p>Last updated:July 24th, 2018</p>
-						<p>Career Buddy: Marlon Peseke</p>
-						<h2>My Links</h2>
-						<ul>
-							<li><a href="https://www.linkedin.com/in/ryolambert/">LinkedIn</a></li>
-							<li><a href="https://twitter.com/_RelevantDesign">Twitter</a></li>
-							<li><a href="#">Medium</a></li>
+			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow">
+				<div class="row">
+					<div class="col-sm-6">
+						<h2 class="nudge">My Links</h2>
+						<ul class="nudge">
+							<li>
+								<a href="https://www.linkedin.com/in/ryolambert/">LinkedIn</a>
+							</li>
+							<li>
+								<a href="https://twitter.com/_RelevantDesign">Twitter</a>
+							</li>
+							<li>
+								<a href="#">Medium</a>
+							</li>
 						</ul>
 					</div>
+					<div class="col-sm-6">
+						<p>Last updated:July 24th, 2018</p>
+						<p>Career Buddy: Marlon Peseke</p>
+					</div>
+				</div>
+			</div>
 		</div>
+
 
 		<div class="container">
 			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow">
@@ -35,37 +51,42 @@
 				<hr/>
 				<div class="persona-content">
 					<h3>My Learning Style</h3>
-					<hr/>
-					<p><strong>Visual</strong></p>
+					<p>
+						<strong>Visual</strong>
+					</p>
 					<p>30% Auditory</p>
 					<p>40% Visual</p>
 					<p>30% Tactile</p>
 					<h3>Visual Speaks</h3>
 					<hr/>
 					<img src="visual-speaks.jpg" class="img-responsive center-block box-shadow"
-						  alt="Picture of Kids Holding Weights and Firefighter Helping Woman"/>
-					<p><em>Image 1:</em></p>
-					<p><em>Image 2:</em></p>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow">
-				<div class="persona-content">
+						  alt="Picture of Kids Holding Weights and Firefighter Helping Woman"
+					/>
+					<p>
+						<br/>
+						<em>Image 1:</em> I chose this image as a great comparison for all of us starting
+						out our journey here at the Deep Dive. Beginners all working out and helping
+						eachother grow.</p>
+					<p>
+						<em>Image 2:</em> Now this image is how I'd like to see myself in a few years. As
+						someone who's a vital part of my community, more than willing and finally capable
+						of being able to really make a difference and help!</p>
+					<br/>
 					<h3>Quantitative Accomplishments</h3>
 					<ul>
-						<li>I've helped develop, implement, and organize the network infrastructure databases for over 150
-							buildings across UNM's Albuquerque campuses.
+						<li>I've helped develop, implement, and organize the network infrastructure databases
+							for over 150 buildings across UNM's Albuquerque campuses.
 						</li>
-						<li>Freelance web design, social media, and content development for a local business earning them over
-							1500 unique visitors to their site within the first month and over 2-300 page followers on social
-							media within that same period.
+						<li>Freelance web design, social media, and content development for a local business
+							earning them over 1500 unique visitors to their site within the first month
+							and over 2-300 page followers on social media within that same period.
 						</li>
-						<li>I've taught, run, and orchestrated martial arts programs as afterschool and summercamps with on
-							average 25 students per class and over 100 students total from the ages of 4 years old to 18 years
-							old.
+						<li>I've taught, run, and orchestrated martial arts programs as afterschool and
+							summercamps with on average 25 students per class and over 100 students total
+							from the ages of 4 years old to 18 years old.
 						</li>
 					</ul>
+					<br/>
 					<h3>Qualitative Features</h3>
 					<p>Strengths &amp; Weaknesses</p>
 					<ul>
@@ -73,67 +94,148 @@
 						<li>I have a penchant for tra</li>
 						<li>Thing 3</li>
 					</ul>
+					<br/>
 					<h3>Creativity &amp; Logic Balance in Passion Projects</h3>
+					<br/>
+					<p></p>
 					<h3>Golden Circle</h3>
-					<p><em>Why</em></p>
+					<p>
+						<em>Why</em>
+					</p>
 					<ol>
-						<li>Technology should help augment the human experience, not takeaway. And I'd like to help build that
-							future.
+						<li>Technology should help augment the human experience, not takeaway. And I'd like
+							to help build that future.
 						</li>
 					</ol>
-					<p><em>How</em></p>
+					<p>
+						<em>How</em>
+					</p>
 					<ol start="2">
-						<li>By coding, designing, planning, engaging people, getting a web developer job, building a startup.
+						<li>By coding, designing, planning, engaging people, getting a web developer job,
+							building a startup.
 						</li>
 					</ol>
-					<p><em>What?</em></p>
+					<p>
+						<em>What?</em>
+					</p>
 					<ol start="3">
 						<li>Websites, web-apps, mobile-apps, digital art, ui/ux design, community research/events.</li>
 					</ol>
+					<br/>
 					<h3>Elevator Pitch</h3>
-					<p><strong>Version 1</strong></p>
+					<p>
+						<strong>Version 1</strong>
+					</p>
 					<hr/>
-					<p>Name + WHAT + WHY + HOW + Question<br/>
-						Hi, my name is Ryo. I build websites, apps, digital art, ui/ux; that help connect people to the
-						communities, services,places, and products that enrich life.</p>
-					<p>I'm doing this by learning about programming in JS, CSS/HTML, getting involved in the tech community,
-						and
-						working on demo projects.
-						Why wait for the future, let's build it!</p>
-					<p><strong>Version 2</strong></p>
-					<p>Hi, my name is Ryo, I'm a digital creative and front end engineer. I love building beautiful yet
-						functional web apps and sites to connect people with the communities, services, and products that
-						enrich
-						their lives.</p>
-					<p>At the moment I'm honing my skillsets at Deep Dive Coding Bootcamp, and jumping in Abq's web/app
-						development scene. If you're a web development agency looking to hire or are a dev looking to
-						collaborate
-						look no further!</p>
-					<p><strong>Version 3</strong></p>
-					<p>Hi, my name is Ryo Lambert. I'm a web developer, frontend engineer, but I'd like to think of myself as
-						a
-						digital nomad or creative... I love building web apps, sites, and digital experiences to connect
-						people
-						with the communities, services, and products that enrich their lives.</p>
+					<p>Name + WHAT + WHY + HOW + Question
+						<br/> Hi, my name is Ryo. I build websites, apps, digital art, ui/ux; that help connect
+						people to the communities, services,places, and products that enrich life.</p>
+					<p>I'm doing this by learning about programming in JS, CSS/HTML, getting involved
+						in the tech community, and working on demo projects. Why wait for the future,
+						let's build it!</p>
+					<p>
+						<strong>Version 2</strong>
+					</p>
+					<p>Hi, my name is Ryo, I'm a digital creative and front end engineer. I love building
+						beautiful yet functional web apps and sites to connect people with the communities,
+						services, and products that enrich their lives.</p>
+					<p>At the moment I'm honing my skillsets at Deep Dive Coding Bootcamp, and jumping
+						in Abq's web/app development scene. If you're a web development agency looking
+						to hire or are a dev looking to collaborate look no further!</p>
+					<p>
+						<strong>Version 3</strong>
+					</p>
+					<p>Hi, my name is Ryo Lambert. I'm a web developer, frontend engineer, but I'd like
+						to think of myself as a digital nomad or creative... I love building web apps,
+						sites, and digital experiences to connect people with the communities, services,
+						and products that enrich their lives.</p>
 
 					<h2>Weekly Reflections</h2>
 					<hr/>
 					<h3>Week 1</h3>
-					<p>Thus far, everything has been fairly intense! Some of the best parts of this week has really been
-						getting
-						up to speed with the schedule, and familiarizing myself with the toolsets. I'm super excited about
-						getting into the thick of it, content-wise. Also if this week's assignment's I've completed are any
-						indicator of how the next 9 weeks will turn out it's going to be an epic adventure!</p>
-					<p><a href="https://bootcamp-coders.cnm.edu/~jlambert13/data-design/epic/index.php">Check out the start
-						of
-						my data-design project</a></p>
+					<p>Thus far, everything has been fairly intense! Some of the best parts of this
+						week has really been getting up to speed with the schedule, and familiarizing
+						myself with the toolsets. I'm super excited about getting into the thick of
+						it, content-wise. Also if this week's assignment's I've completed are any indicator
+						of how the next 9 weeks will turn out it's going to be an epic adventure!</p>
+					<p>
+						<a href="https://bootcamp-coders.cnm.edu/~jlambert13/data-design/epic/index.php">Check out the start
+							of my data-design project</a>
+					</p>
 					<h3>Week 2</h3>
-					<p>Spicy jalapeno bacon ipsum dolor amet shoulder shankle jerky spare ribs ham drumstick turducken
-						kielbasa
-						chicken doner meatball landjaeger bresaola cow. Jerky ball tip pastrami cow pork belly corned beef
-						shoulder. Pancetta leberkas kevin salami. Chicken strip steak shankle, kielbasa kevin bresaola tri-tip
-						cupim pork loin andouille pork belly jowl chuck. Salami ball tip tongue, kevin beef leberkas boudin.
-						Pancetta bacon short ribs shank.</p>
+					<p>Spicy jalapeno bacon ipsum dolor amet shoulder shankle jerky spare ribs ham drumstick
+						turducken kielbasa chicken doner meatball landjaeger bresaola cow. Jerky ball
+						tip pastrami cow pork belly corned beef shoulder. Pancetta leberkas kevin salami.
+						Chicken strip steak shankle, kielbasa kevin bresaola tri-tip cupim pork loin
+						andouille pork belly jowl chuck. Salami ball tip tongue, kevin beef leberkas
+						boudin. Pancetta bacon short ribs shank.</p>
+					<h3>Week 3</h3>
+					<p>Man, it seems like the time is just flying by and there's never enough time in the day! I'm getting
+						home from class and am chomping at the bit to dig into more or start 15 more projects. Sadly though,
+						we don't have that much time. A guy can dream though right?</p>
+					<p>Time constraints aside, it's been a great week. We got assigned our capstone projects, and the idea I
+						pitched was what our group is working on! It's going to be a really informative outdoor recreation
+						finder web app specific to NM and the api I found from the RIDB at recreation.gov is perfect. It's a
+						huge dataset that seems like it's going to be a challenge to parse out, but it's incredibly exciting
+						working out our conceptual-models for the data-design. I'm curious as to what our fully flushed out
+						implementation is going to be in perfecting our entity relationships and databases.</p>
+					<h3>Week 4</h3>
+					<p>Reflection about team's capacity and my place in it- <br/>
+						First off, the game our capstone group was playing was tons of fun. I learned a lot about my teammates
+						personalities and approaches. I found that Bashir is a great listener, quick to pick up the rules, and
+						really awesome at settling the rest of the team's nerves after moving to fast or making mistakes.
+						Next, with Joy I learned she's really good at bringing together group consensus and moving the team
+						forward. While Sarah on the otherhand is fantastic at putting together her thoughts into plans and
+						actions, which really helped all of us set in motion a team plan!
+						Personally, I feel that during our team exercise playing the game I really need to take some time to
+						slow down in order to maximize team efficacy. But I also found that when playing I'm really good at
+						taking a step back and providing new approaches to optimize team efforts. All in all, the game was
+						great and I learned a little about myself along the way!
+					</p>
+
+					<p>Reflection- On Why I Love Coding <br/>
+						The biggest discovery and really most exciting part learning to code is the notion that every major
+						project or goal is achievable so long as you break it down into it's functional components. Being able
+						to see that connection between pieces of code and figure out how each piece works, then putting them
+						together like lego pieces and watch it work is just an amazing feeling. I'm pumped to start getting to
+						work on really big projects and figure out how they'll work!
+					</p>
+
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow" id="web-identity">
+				<h2>Web Identity</h2>
+				<hr/>
+				<div class="persona-content">
+					<p> Below is a map of my web identities. I feel like I have a decent web presence with my social media
+						accounts, but they could use a bit more polish, substantive content, and I definitely need a portfolio
+						site! All of which would really help potential employers connect with me and qualify some of my
+						expertise.</p>
+					<table>
+						<tr>
+							<th></th>
+							<th>Professional</th>
+							<th>Personal</th>
+						</tr>
+						<tr>
+							<td class="left-column"><u>Identity</u></td>
+							<td>Ryo Lambert, ryolambert</td>
+							<td>_RelevantDesign, Imagine_Asians</td>
+						</tr>
+						<tr>
+							<td class="left-column"><u>Channels</u></td>
+							<td>GitHub, LinkedIn, Twitter, Stackoverflow</td>
+							<td>Instagram, Snapchat</td>
+						</tr>
+						<tr>
+							<td class="left-column"><u>Content</u></td>
+							<td>Web Developer, Big Techie.</td>
+							<td>Person who loves tech, post a lot of pictures of graphics.
+							</td>
+						</tr>
+					</table>
 				</div>
 			</div>
 		</div>
@@ -151,4 +253,5 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	</body>
+
 </html>
