added week 5 and burner activity

--- a/home-page.html
+++ b/home-page.html
@@ -14,32 +14,25 @@
 	</head>
 
 	<body class="home-page">
-		<div class="container text-center ">
+		<div class="container text-center">
 			<h1 class="title-head">My Professional Development Journey</h1>
 			<h2 class="title-subhead">- Ryo Lambert</h2>
 			<hr/>
 		</div>
 		<div class="container">
 			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow">
-				<div class="row">
-					<div class="col-sm-6">
-						<h2 class="nudge">My Links</h2>
-						<ul class="nudge">
-							<li>
-								<a href="https://www.linkedin.com/in/ryolambert/">LinkedIn</a>
-							</li>
-							<li>
-								<a href="https://twitter.com/_RelevantDesign">Twitter</a>
-							</li>
-							<li>
-								<a href="#">Medium</a>
-							</li>
-						</ul>
-					</div>
-					<div class="col-sm-6">
-						<p>Last updated:July 24th, 2018</p>
-						<p>Career Buddy: Marlon Peseke</p>
-					</div>
+				<div class="nudge">
+					<h2>My Links</h2>
+					<p><a href="https://www.linkedin.com/in/ryolambert/">LinkedIn</a></p>
+
+					<p><a href="https://twitter.com/_RelevantDesign">Twitter</a></p>
+
+					<p><a href="#">Medium</a></p>
+
+					<p><a href="ryoLambertResume.pdf">Resume Download Link</a></p>
+
+					<p>Last updated: August 7th, 2018</p>
+					<p>Career Buddy: Marlon Peseke</p>
 				</div>
 			</div>
 		</div>
@@ -90,14 +83,14 @@
 					<h3>Qualitative Features</h3>
 					<p>Strengths &amp; Weaknesses</p>
 					<ul>
-						<li>I am extremely creative in both artistic and technological applications</li>
-						<li>I have a penchant for tra</li>
-						<li>Thing 3</li>
+						<li>I am extremely inventive and artistic in technological applications.</li>
+						<li>I have a penchant for thinking out the box and creative problem solving.</li>
+						<li>I love creating things that have an optimal balance between aesthetic and function.</li>
 					</ul>
 					<br/>
-					<h3>Creativity &amp; Logic Balance in Passion Projects</h3>
-					<br/>
-					<p></p>
+					<!--<h3>Creativity &amp; Logic Balance in Passion Projects</h3>-->
+					<!--<br/>-->
+					<!--<p></p>-->
 					<h3>Golden Circle</h3>
 					<p>
 						<em>Why</em>
@@ -149,6 +142,11 @@
 						to think of myself as a digital nomad or creative... I love building web apps,
 						sites, and digital experiences to connect people with the communities, services,
 						and products that enrich their lives.</p>
+						<br/>
+					<h3>What's Cooking in the Career Kitchen?</h3>
+					<img src="Burner%20Activity.JPG" class="img-responsive center-block box-shadow"
+						  alt="Picture of 4 burners and the opportunities I have lined up"
+					/>
 
 					<h2>Weekly Reflections</h2>
 					<hr/>
@@ -163,12 +161,12 @@
 							of my data-design project</a>
 					</p>
 					<h3>Week 2</h3>
-					<p>Spicy jalapeno bacon ipsum dolor amet shoulder shankle jerky spare ribs ham drumstick
-						turducken kielbasa chicken doner meatball landjaeger bresaola cow. Jerky ball
-						tip pastrami cow pork belly corned beef shoulder. Pancetta leberkas kevin salami.
-						Chicken strip steak shankle, kielbasa kevin bresaola tri-tip cupim pork loin
-						andouille pork belly jowl chuck. Salami ball tip tongue, kevin beef leberkas
-						boudin. Pancetta bacon short ribs shank.</p>
+					<p>This week seems like we're getting into the swing of things, I've just sort of settled into the
+						schedule, but am really enjoying everything thus far. The material is at about the right difficulty
+						level and I'm really loving the environment and the attitudes of my classmates! After such a long time
+						from my first experiences in coding and programming, I've got to say that things are working out a lot
+						better. I think the whole group and supportive atmosphere is helping me out a ton with the development
+						phobia I developed after taking Java at UNM in high school.</p>
 					<h3>Week 3</h3>
 					<p>Man, it seems like the time is just flying by and there's never enough time in the day! I'm getting
 						home from class and am chomping at the bit to dig into more or start 15 more projects. Sadly though,
@@ -200,7 +198,16 @@
 						together like lego pieces and watch it work is just an amazing feeling. I'm pumped to start getting to
 						work on really big projects and figure out how they'll work!
 					</p>
+					<h3>Week 5</h3>
+					<p>It was a tough week getting through the ups and downs with unit testing and having to learn to commit
+						more to Github, but all in all things are going! I am though starting to feel the stress ramp up on
+						working to get all the assignments done in time, but I'm working little by little to get everything
+						done. Just have to keep chugging along. All that aside, I'm excited to get involved in the community
+						here with Million Cups next week and getting our projects moved along.</p>
 
+					<p>Reflection- On Why I Love Coding <br/>
+						A tid bit as to why I love coding is because of the immense flexibility and the endless applications
+						it has in solving real-world problems!</p>
 				</div>
 			</div>
 		</div>
