fixed some formatting and positioning

--- a/home-page.html
+++ b/home-page.html
@@ -20,8 +20,8 @@
 			<hr/>
 		</div>
 		<div class="container">
-			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow">
-				<div class="nudge">
+			<div class="well col-xs-12 col-md-12 col-lg-12 box-shadow text-center m-auto">
+				<div>
 					<h2>My Links</h2>
 					<p><a href="https://www.linkedin.com/in/ryolambert/">LinkedIn</a></p>
 
@@ -31,7 +31,7 @@
 
 					<p><a href="ryoLambertResume.pdf">Resume Download Link</a></p>
 
-					<p>Last updated: August 7th, 2018</p>
+					<p>Last updated: August 13th, 2018</p>
 					<p>Career Buddy: Marlon Peseke</p>
 				</div>
 			</div>
@@ -116,10 +116,10 @@
 					</ol>
 					<br/>
 					<h3>Elevator Pitch</h3>
+					<hr/>
 					<p>
 						<strong>Version 1</strong>
 					</p>
-					<hr/>
 					<p>Name + WHAT + WHY + HOW + Question
 						<br/> Hi, my name is Ryo. I build websites, apps, digital art, ui/ux; that help connect
 						people to the communities, services,places, and products that enrich life.</p>
@@ -144,6 +144,7 @@
 						and products that enrich their lives.</p>
 						<br/>
 					<h3>What's Cooking in the Career Kitchen?</h3>
+					<hr/>
 					<img src="Burner%20Activity.JPG" class="img-responsive center-block box-shadow"
 						  alt="Picture of 4 burners and the opportunities I have lined up"
 					/>
