added week 7 reflection

--- a/home-page.html
+++ b/home-page.html
@@ -284,6 +284,13 @@
 					<p>Reflection- On Why I Love Coding <br/>
 						After this week I have to say I love coding because of its potential to bring people together, collaborate, share, and build each other up! </p>
 
+					<h3>Week 7</h3>
+					<p>This week felt super productive, aside from my gastrointestinal battle with particularly aggressive foodborne pathogens. I felt like I got a lot done- I managed to get a good chunk of my personal website working and styled and for the most part finished our ridiculous data-downloader and APIs. Check out how my pwp is rolling out on the link below. So this upcoming week should be really great, getting to start spinning up Angular (finally we get to do FRONT-END!!!) and learning security (👨‍💻 hacking man!).</p>
+
+					<a href="https://bootcamp-coders.cnm.edu/~jlambert13/my-pwp-ryo/public_html/">Check out my Personal Website Project</a>
+
+					<p>Reflection- On Why I Love Coding <br/>
+					After working so hard to make so many little changes on my personal website, I'll say it was EXTREMELY frustrating, but also rewarding at the same time. It was great to see actual change and meaningful progress with my skills and knowledge having an effect on what I'm doing! So the reason why I love coding is because despite how aggravating and upsetting the highs, lows, and downright derailments on this learning rollercoaster its been a blast taking the adventure so far!</p>
 					<h2 id="5" class="pt-4">Web Identity</h2>
 					<hr/>
 					<p> Below is a map of my web identities. I feel like I have a decent web presence with my social media
